test/libsolidity/syntaxTests/pragma/version_number_too_large.sol
pragma solidity 4294967296;
// ----
// ParserError 1684: (0-27): Invalid version pragma. Integer too large to be used in a version number.
